# ACC_MCP_V0.2

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py  server.py
src/api/: __init__.py  client.py
src/auth/: __init__.py  callback_server.py  oauth_client.py  token_store.py
src/schemas/: __init__.py  contexts.py  custom_attributes.py  issue_types.py  issues.py  responses.py  statuses.py
src/tools/: __init__.py  base.py  contexts.py  custom_attributes.py  issue_types.py  issues.py  statuses.py
src/utils/: __init__.py  singleton.py
