[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acc_mcp"
version = "0.2.0"
description = "Model Context Protocol (MCP) server for Autodesk Construction Cloud Issues API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Itai Cohen", email = "itaico82@gmail.com"}
]
dependencies = [
    "aiohttp>=3.8.5",
    "pydantic>=2.4.0",
    "authlib>=1.2.1",
    "cryptography>=41.0.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "typing-extensions>=4.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "ruff>=0.0.282"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "PL"]
ignore = []